--- a/build.gradle
+++ b/build.gradle
@@ -53,6 +53,11 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 
+	implementation group: 'org.springframework.data', name: 'spring-data-jpa', version: '2.5.0'
+	implementation group: 'org.mariadb.jdbc', name: 'mariadb-java-client', version: '2.7.3'
+	implementation group: 'javax.persistence', name: 'javax.persistence-api', version: '2.2'
+
+
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
