--- a/build.gradle
+++ b/build.gradle
@@ -1,25 +1,25 @@
 buildscript {
-	ext {
-		springBootVersion = '2.4.5'
-	}
+    ext {
+        springBootVersion = '2.4.5'
+    }
 
-	repositories {
-		mavenCentral()
-		maven {
-			url "https://plugins.gradle.org/m2/"
-		}
-	}
-	dependencies {
-		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
-		classpath('gradle.plugin.com.palantir.gradle.docker:gradle-docker:0.22.1')
-	}
+    repositories {
+        mavenCentral()
+        maven {
+            url "https://plugins.gradle.org/m2/"
+        }
+    }
+    dependencies {
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+        classpath('gradle.plugin.com.palantir.gradle.docker:gradle-docker:0.22.1')
+    }
 }
 
 plugins {
-	id 'org.springframework.boot' version '2.4.5'
-	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
-	id 'java'
-	id 'com.palantir.docker' version '0.22.1'
+    id 'org.springframework.boot' version '2.4.5'
+    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
+    id 'java'
+    id 'com.palantir.docker' version '0.22.1'
 }
 
 group = 'guirodg'
@@ -27,40 +27,41 @@ version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '16'
 
 bootJar {
-	baseName = 'curso_aws_project01'
-	version = '1.0.1'
+    baseName = 'curso_aws_project01'
+    version = '1.0.1'
 }
 
 task unpack(type: Copy) {
-	dependsOn bootJar
-	from(zipTree(tasks.bootJar.outputs.files.singleFile))
-	into("build/dependency")
+    dependsOn bootJar
+    from(zipTree(tasks.bootJar.outputs.files.singleFile))
+    into("build/dependency")
 }
 docker {
-	name "${project.group}/${bootJar.baseName}"
-	tags "${bootJar.version}"
-	copySpec.from(tasks.unpack.outputs).into("dependency")
-	buildArgs(['DEPENDENCY': "dependency"])
+    name "${project.group}/${bootJar.baseName}"
+    tags "${bootJar.version}"
+    copySpec.from(tasks.unpack.outputs).into("dependency")
+    buildArgs(['DEPENDENCY': "dependency"])
 }
 
 repositories {
-	mavenCentral()
-	maven { url 'https://repo.spring.io/milestone' }
-	maven { url 'https://repo.spring.io/snapshot' }
+    mavenCentral()
+    maven { url 'https://repo.spring.io/milestone' }
+    maven { url 'https://repo.spring.io/snapshot' }
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'org.springframework.boot:spring-boot-starter-actuator'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
 
-	implementation group: 'org.springframework.data', name: 'spring-data-jpa', version: '2.5.0'
-	implementation group: 'org.mariadb.jdbc', name: 'mariadb-java-client', version: '2.7.3'
-	implementation group: 'javax.persistence', name: 'javax.persistence-api', version: '2.2'
+    compileClasspath(group: 'com.amazonaws', name: 'aws-java-sdk-sns', version: '1.11.887')
+
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    compileClasspath(group: 'org.mariadb.jdbc', name: 'mariadb-java-client', version: '2.7.3')
 
 
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
 test {
-	useJUnitPlatform()
+    useJUnitPlatform()
 }
