--- a/build.gradle
+++ b/build.gradle
@@ -54,6 +54,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
 
     compileClasspath(group: 'com.amazonaws', name: 'aws-java-sdk-sns', version: '1.11.887')
+    compileClasspath(group: 'com.amazonaws', name: 'aws-java-sdk-s3', version: '1.11.887')
 
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     compileClasspath(group: 'org.mariadb.jdbc', name: 'mariadb-java-client', version: '2.7.3')
