--- a/build.gradle
+++ b/build.gradle
@@ -56,6 +56,10 @@ dependencies {
     compileClasspath(group: 'com.amazonaws', name: 'aws-java-sdk-sns', version: '1.11.887')
     compileClasspath(group: 'com.amazonaws', name: 'aws-java-sdk-s3', version: '1.11.887')
 
+    compileClasspath(group: 'com.amazonaws', name: 'aws-java-sdk-sqs', version: '1.11.887')
+    compileClasspath(group: 'org.springframework', name: 'spring-jms', version: '5.2.9.RELEASE')
+    compileClasspath(group: 'com.amazonaws', name: 'amazon-sqs-java-messaging-lib', version: '1.0.8')
+
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     compileClasspath(group: 'org.mariadb.jdbc', name: 'mariadb-java-client', version: '2.7.3')
 
