--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,4 @@ aws.region=us-east-1
 aws.sns.topic.product.events.arn=product-events
 
 aws.s3.bucket.invoice.name=pcs-invoice
+aws.sqs.queue.invoice.events.name=s3-invoice-events
